[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joy-deploy"
version = "1.0.0"
description = "Make deployments delightful with animations, sounds, and celebrations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Joy Deploy Contributors"}]
keywords = ["deploy", "fun", "animation", "terminal", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
joy-deploy = "joy_deploy.cli:cli"

[project.urls]
Homepage = "https://github.com/joy-deploy/joy-deploy"
Issues = "https://github.com/joy-deploy/joy-deploy/issues"
